--- a/portfolio/leon2/css/navbar.css
+++ b/portfolio/leon2/css/navbar.css
@@ -1,33 +1,52 @@
-a {
-  text-decoration: none;
-  color: var(--text-color);
-}
-
 .topheader {
-  box-shadow: 0 0.25rem 0.3125rem var(--navbar-shallow-color);
+  box-shadow: var(--navbar-shadow);
   position: fixed;
   /* fijo que se vea siempre */
   background-color: var(--theme-color);
-  /* con esto hago que no se m,ueva nada aunque si hago cambios en otras partes  */
+  /* con esto hago que no se mueva nada aunque si hago cambios en otras partes  */
   left: 0;
   top: 0;
   width: 100%;
+  z-index: 100;
+  /* sirve para que si alguna imagen es mas grande este no sobresalga   */
 }
 
 .topnav {
   display: flex;
   justify-content: space-between;
   padding: 10px;
-  max-width: 61.25rem;
+  /* un modo de centrar todo a los costados tipo el around */
+  max-width: 95%;
   margin: 0 auto;
+}
+
+.dark-mode-btn,
+.ligth-mode-btn {
+  border: none;
+  padding: 0;
+  background: none;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+:root [data-theme="ligth"] .dark-mode-btn {
+  display: none;
+}
+
+:root [data-theme="dark"] .ligth-mode-btn {
+  display: none;
 }
 
 .logo {
   display: flex;
   align-items: center;
-  font-size: 18px;
+  font-size: 1.125em;
   font-weight: 500;
-  color: var(--primary-color);
+  color: var(--accent-color);
+  margin-right: auto;
 }
 
 .logo img {
@@ -41,17 +60,52 @@ a {
 
 .menu li {
   padding: 0 15px;
-  /* ariiva y abajo 0 pixeles y derecha a izquierda .9375rem osea 1.875rem entre ellos */
+  /* ariiva y abajo 0 pixeles y derecha a izquierda 15px osea 30px entre ellos */
 }
 
 .menu a {
   color: var(--text-color);
-  font-size: 1.125rem;
+  font-size: 1em;
   font-weight: 500;
-  line-height: 3.125rem;
+  line-height: 50px;
   /* otro modo de centrar la linea de texto de forma orizontal */
   text-transform: uppercase;
   /* maiuscula */
+  position: relative;
+}
+
+/* dopo el HOMEAA */
+.menu a::after {
+  content: " ";
+  /* aca en el contenido le podemos meter una imagen o texto que aparecera
+  ejemplo content: "aa"  y vez  que pasa en el texto se aumenta la letra aa es. HOMEAA*/
+  background-color: var(--secondary-color);
+  position: absolute;
+  left: 0;
+  top: calc(100% + 0.25rem);
+  /* calcula asi esta un poco distante el home de la raya de abajo */
+  width: 100%;
+  height: 0.25rem;
+
+  opacity: 0;
+  transition: 0.4s;
+  /* 4 segundos de ritardo  */
+}
+
+/* antes de AAHOME */
+/* .menu a::before{
+  content: " aa";
+  /* aca en el contenido le podemos meter una imagen o texto que aparecera
+  ejemplo content: "aa"  y vez  que pasa en el texto se aumenta la letra AA antes es. AAHOME*/
+/* } */
+
+.menu a.selected::after,
+.menu a:hover::after {
+  opacity: 0.8;
+}
+
+.menu a:hover {
+  color: var(--accent-color);
 }
 
 .open-menu,
