--- a/portfolio/leon2/css/desktop.css
+++ b/portfolio/leon2/css/desktop.css
@@ -1,19 +1,67 @@
+@media (min-width: 950px) {
 
-/* desktop */
+  @import url("https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,700;1,700&display=swap");
 
-@media (min-width: 992px) {
-    .grid-container {
-      display: grid;
-      gap: 1.25rem;
-      grid-template-columns: 100px auto 100px ;
-      /* colunnas  verticales ancho width este caso 2 */
-      grid-template-rows:100px auto 100px ;
-      /* filas altura  height */
-      grid-template-areas:
-        "header header header"
-        "navbar main sidebar"
-        "footer footer footer"
-      /* tres colunnas poniendo / poi  200px(12.5rem) auto 200px; */
-    }
+  .orizontal-padding{
+    padding-left:4.375rem;
+    padding-right: 4.375rem;
   }
   
+  .vertical-padding{
+    padding-top: 4.375rem;
+    padding-bottom: 4.375rem;
+  }
+
+
+  .profile-info {
+    margin-bottom: 0rem;
+  }
+
+  .profile-img {
+    width: 100%;
+    max-width: 350px;
+    /* esto me hara que sera un maximo de 350px osea no crecera mas asi 
+    se cambie el ancho */
+    /* transform: scalex(-1); */
+    /* cambia de mirada orizontal al contraio */
+  }
+
+  .profile {
+    text-align: left;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    /* centrar modificar el max-width para ver el efecto */
+    max-width: 90%;
+    margin: 0 auto;
+    /* 0 su e giu 
+    auto dx e sx */
+  }
+
+  .profile-title {
+    font-size: 3.75rem;
+    color: var(--accent-color);
+  }
+
+  .profile-details {
+    font-size: 1.5625em;
+    font-weight: 500;
+    max-width: 28.125rem;
+    margin: 30px 0;
+  }
+
+  .profile-btn {
+    background-color: var(--accent-color);
+    color: var(--theme-color);
+    border: none;
+    /* por defecto el button mete unos border asi que lo elimino */
+    font-size: 1.75rem;
+    padding: 0.5em 1em;
+    border-radius: 0.4375rem;
+    cursor: pointer;
+  }
+
+  .profile-btn:hover {
+    filter: brightness(130%);
+  }
+}
