--- a/portfolio-leon/src/index.css
+++ b/portfolio-leon/src/index.css
@@ -7,6 +7,7 @@ body {
   padding: 0;
   box-sizing: border-box;
   /* calcula los pixeles metidos en automatico */
+  background-color:rgb(11, 6, 26);
 }
 
 html {
