update, portofolio leon useState images y

--- a/portfolio-leon/src/componenti/FooterTotal/components/FooterUno/css/index.css
+++ b/portfolio-leon/src/componenti/FooterTotal/components/FooterUno/css/index.css
@@ -1,3 +1,8 @@
-h3{
-    color:aquamarine
+.text{
+    color:rgb(52, 212, 159);
+    display: flex;
+    justify-content:center;
+    align-items: center;
+
+
 }
