--- a/portfolioHugoLeon/src/componenti/MainTotal/components/Lavori/css/index.css
+++ b/portfolioHugoLeon/src/componenti/MainTotal/components/Lavori/css/index.css
@@ -23,6 +23,8 @@
     /* centra de forma vertical */
     justify-content: center;
     /* centra de forma orizzontale */
+    flex-wrap: wrap;
+   
 }
 
 
