update fronted - lista

--- a/portfolioHugoLeon/src/componenti/FooterTotal/components/FooterUno/css/index.css
+++ b/portfolioHugoLeon/src/componenti/FooterTotal/components/FooterUno/css/index.css
@@ -20,3 +20,15 @@
     display: flex;
     gap: 20px;
 }
+
+.container-sitio{
+    display: flex;
+    align-items: center;
+    /* centra de forma vertical */
+    justify-content: center;
+    /* centra de forma orizzontale */
+    flex-wrap: wrap;
+    text-align: center;
+    
+    gap:20px;
+}
