--- a/portfolioHugoLeon/src/componenti/MainTotal/components/Products/css/index.css
+++ b/portfolioHugoLeon/src/componenti/MainTotal/components/Products/css/index.css
@@ -2,3 +2,21 @@
     color:aliceblue;
     
 }
+
+
+.container-sitio1{
+    display: flex;
+    align-items: center;
+    /* centra de forma vertical */
+    justify-content: center;
+    /* centra de forma orizzontale */
+    flex-wrap: wrap;
+    text-align: center;
+    gap:15px;
+    
+}
+
+.divider {
+    border: black solid 0.5px;
+  }
+  
